irg/parser.output
   0  $accept : %entry% $end

   1  top : specs EOF

   2  LocatedID : ID

   3  specs : MachineSpec
   4        | specs MachineSpec

   5  MachineSpec : LetDef
   6              | TypeSpec
   7              | MemorySpec
   8              | RegisterSpec
   9              | PortSpec
  10              | ModeSpec
  11              | OpSpec
  12              | ResourceSpec
  13              | ExceptionSpec
  14              | ExtendSpec
  15              | CanonSpec
  16              | IF Expr THEN
  17              | ELSE
  18              | ELSIF Expr THEN
  19              | ENDIF
  20              | FOR error
  21              | SWITCH error
  22              | VarSpec

  23  LetDef : LET OptStar LocatedID EQ LetExpr
  24         | LET OptStar LocatedID COLON Type EQ LetExpr

  25  OptStar :
  26          | STAR

  27  ResourceSpec : RESOURCE ResourceList

  28  ResourceList : Resource
  29               | ResourceList COMMA Resource

  30  Resource : LocatedID
  31           | LocatedID LBRACK CARD_CONST RBRACK

  32  CanonSpec : CANON STRING_CONST LPAREN CanonParamList RPAREN
  33            | CANON Type STRING_CONST LPAREN CanonParamList RPAREN
  34            | CANON STRING_CONST LPAREN RPAREN
  35            | CANON Type STRING_CONST LPAREN RPAREN
  36            | CANON Type STRING_CONST

  37  CanonParamList : CanonParam
  38                 | CanonParamList COMMA CanonParam

  39  CanonParam : Type
  40             | LocatedID COLON Type

  41  ExceptionSpec : EXCEPTION IdentifierList

  42  IdentifierList : LocatedID
  43                 | IdentifierList COMMA LocatedID

  44  TypeSpec : TYPE LocatedID EQ TypeExpr

  45  TypeExpr : BOOL
  46           | INT LPAREN LetExpr RPAREN
  47           | CARD error
  48           | CARD LPAREN LetExpr RPAREN
  49           | CARD error
  50           | FIX LPAREN LetExpr COMMA LetExpr RPAREN
  51           | FLOAT LPAREN LetExpr COMMA LetExpr RPAREN
  52           | LBRACK LetExpr DOUBLE_DOT LetExpr RBRACK
  53           | ENUM LPAREN ValueList RPAREN

  54  ValueList : Value
  55            | ValueList COMMA Value

  56  Value : LetExpr
  57        | LetExpr DOUBLE_DOT LetExpr

  58  LetExpr : Expr

  59  MemorySpec : MEM LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList

  60  RegisterSpecHeader : REG LocatedID LBRACK RegPart RBRACK

  61  RegisterSpec : RegisterSpecHeader OptionalMemAttrDefList

  62  PortSpecHeader : PORT LocatedID LPAREN PortPart RPAREN

  63  PortSpec : PortSpecHeader OptionalMemAttrDefList

  64  VarSpec : VAR LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList

  65  MemPart : LetExpr COMMA Type
  66          | LetExpr

  67  RegPart : LetExpr COMMA Type
  68          | Type

  69  PortPart : LetExpr COMMA Type
  70           | Type

  71  Type : TypeExpr
  72       | ID

  73  OptionalMemAttrDefList :
  74                         | MemAttrDefList

  75  MemAttrDefList : MemAttrDef
  76                 | MemAttrDefList MemAttrDef

  77  MemAttrDef : VOLATILE EQ LetExpr
  78             | INITIALA EQ LetExpr
  79             | PORTS EQ CARD_CONST COMMA CARD_CONST
  80             | USES EQ UsesDef
  81             | ALIAS EQ MemLocation
  82             | ID EQ Expr
  83             | ID EQ LBRACE Sequence RBRACE

  84  MemLocation : MemLocBase
  85              | MemLocBase BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

  86  MemLocBase : ID
  87             | ID LBRACK Expr RBRACK

  88  ModeSpec : MODE LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList
  89           | MODE LocatedID EQ Identifier_Or_List

  90  OptionalModeExpr :
  91                   | EQ Expr

  92  OpSpec : OP LocatedID LPAREN ParamList RPAREN AttrDefList
  93         | OP LocatedID EQ Identifier_Or_List
  94         | OP LocatedID error

  95  ExtendSpec : ExtendHeader AttrDefList

  96  ExtendHeader : EXTEND ExtendIDList

  97  ExtendIDList : ID
  98               | ExtendIDList COMMA ID

  99  Identifier_Or_List : ID
 100                     | Identifier_Or_List PIPE ID

 101  ParamList :
 102            | ParamListPart
 103            | ParamList COMMA ParamListPart

 104  ParamListPart : ID COLON ParaType

 105  ParaType : TypeExpr
 106           | ID

 107  AttrDefList :
 108              | NOAttrDefList

 109  NOAttrDefList : AttrDef
 110                | NOAttrDefList AttrDef

 111  AttrDef : AttrID EQ Expr
 112          | AttrID EQ LBRACE Sequence RBRACE
 113          | AttrID EQ error
 114          | AttrID error
 115          | USES EQ UsesDef

 116  AttrID : SYNTAX
 117         | IMAGE
 118         | ACTION
 119         | ID

 120  Sequence :
 121           | StatementList SEMI

 122  StatementList : Statement
 123                | StatementList SEMI Statement

 124  Statement :
 125            | ACTION
 126            | ID
 127            | ID LPAREN
 128            | ID DOT ACTION
 129            | ID DOT ID
 130            | Location EQ Expr
 131            | ConditionalStatement
 132            | STRING_CONST LPAREN ArgList RPAREN
 133            | ERROR LPAREN STRING_CONST RPAREN
 134            | LET ID EQ Expr
 135            | LET ID COLON Type EQ Expr
 136            | LET ID error
 137            | ForHeader DO Sequence ENDDO

 138  ForHeader : FOR ID IN Expr DOUBLE_DOT Expr
 139            | FOR ID COLON Type IN Expr DOUBLE_DOT Expr

 140  ArgList :
 141          | Expr
 142          | ArgList COMMA Expr

 143  Opt_Bit_Optr :
 144               | BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

 145  Location : ID
 146           | ID BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 147           | ID LBRACK Expr RBRACK
 148           | ID LBRACK Expr RBRACK BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 149           | Location DOUBLE_COLON Location
 150           | LPAREN Location RPAREN

 151  ConditionalStatement : IF Expr THEN Sequence OptionalElse ENDIF
 152                       | IF Expr THEN Sequence OptionalElse RBRACE
 153                       | IF Expr THEN Sequence ELSIF Expr THEN Sequence OptionalElse ENDIF
 154                       | SWITCH LPAREN Expr RPAREN LBRACE CaseBody RBRACE

 155  OptionalElse :
 156               | ELSE Sequence

 157  CaseBody : CaseList
 158           | OptCaseList Default OptCaseList

 159  OptCaseList :
 160              | CaseList

 161  CaseList : CaseStat
 162           | CaseList CaseStat

 163  CaseStat : CASE Expr COLON Sequence

 164  Default : DEFAULT COLON Sequence

 165  EnterFormat :

 166  LeaveFormat :

 167  Expr : COERCE LPAREN Type COMMA Expr RPAREN
 168       | COERCE error
 169       | FORMAT LPAREN STRING_CONST COMMA EnterFormat ArgList RPAREN LeaveFormat
 170       | FORMAT error
 171       | STRING_CONST LPAREN ArgList RPAREN
 172       | ID DOT SYNTAX
 173       | ID DOT IMAGE
 174       | ID DOT ID
 175       | Expr DOUBLE_COLON Expr
 176       | ID
 177       | ID LPAREN
 178       | ID LBRACK Expr RBRACK
 179       | ID LBRACK error
 180       | Expr BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 181       | Expr PLUS Expr
 182       | Expr MINUS Expr
 183       | Expr STAR Expr
 184       | Expr SLASH Expr
 185       | Expr PERCENT Expr
 186       | Expr DOUBLE_STAR Expr
 187       | Expr LEFT_SHIFT Expr
 188       | Expr RIGHT_SHIFT Expr
 189       | Expr ROTATE_LEFT Expr
 190       | Expr ROTATE_RIGHT Expr
 191       | Expr LT Expr
 192       | Expr GT Expr
 193       | Expr LEQ Expr
 194       | Expr GEQ Expr
 195       | Expr EQU Expr
 196       | Expr NEQ Expr
 197       | Expr AMPERS Expr
 198       | Expr CIRC Expr
 199       | Expr PIPE Expr
 200       | EXCLAM Expr
 201       | TILD Expr
 202       | PLUS Expr
 203       | MINUS Expr
 204       | Expr AND Expr
 205       | Expr OR Expr
 206       | LPAREN Expr RPAREN
 207       | LPAREN error
 208       | LPAREN Expr error
 209       | IF Expr THEN Expr ELSE Expr ENDIF
 210       | IF Expr THEN Expr ELSIF Expr ENDIF
 211       | IF error
 212       | SWITCH LPAREN Expr RPAREN LBRACE CaseExprBody RBRACE
 213       | SWITCH error
 214       | Constant

 215  Constant : FIXED_CONST
 216           | CARD_CONST
 217           | CARD_CONST_64
 218           | BIN_CONST
 219           | BIN_CONST_64
 220           | STRING_CONST

 221  Bit_Expr : ID
 222           | MINUS Bit_Expr
 223           | PLUS Bit_Expr
 224           | TILD Bit_Expr
 225           | Bit_Expr PLUS Bit_Expr
 226           | Bit_Expr MINUS Bit_Expr
 227           | Bit_Expr STAR Bit_Expr
 228           | Bit_Expr SLASH Bit_Expr
 229           | Bit_Expr PERCENT Bit_Expr
 230           | Bit_Expr DOUBLE_STAR Bit_Expr
 231           | Bit_Expr AMPERS Bit_Expr
 232           | Bit_Expr PIPE Bit_Expr
 233           | Bit_Expr CIRC Bit_Expr
 234           | LPAREN Bit_Expr RPAREN
 235           | FIXED_CONST
 236           | CARD_CONST
 237           | STRING_CONST

 238  CaseExprBody : CaseExprList
 239               | OptCaseExprList ExprDefault OptCaseExprList

 240  OptCaseExprList :
 241                  | CaseExprList

 242  CaseExprList : CaseExprStat
 243               | CaseExprList CaseExprStat

 244  CaseExprStat : CASE Expr COLON Expr

 245  ExprDefault : DEFAULT COLON Expr

 246  UsesDef : UsesOrSequence
 247          | UsesDef COMMA UsesOrSequence

 248  UsesOrSequence : UsesIfAtom
 249                 | UsesOrSequence PIPE UsesIfAtom

 250  UsesIfAtom : UsesIndirectAtom
 251             | IF Expr THEN UsesIfAtom OptionalElseAtom ENDIF

 252  OptionalElseAtom :
 253                   | ELSE UsesIfAtom

 254  UsesIndirectAtom : UsesCondAtom
 255                   | ID DOT USES
 256                   | LPAREN UsesDef RPAREN
 257                   | UsesLocationList AND ID DOT USES
 258                   | UsesLocationList AND LPAREN UsesDef RPAREN

 259  UsesCondAtom : UsesAndAtom
 260               | LBRACE Expr RBRACE UsesAndAtom

 261  UsesAndAtom : UsesLocationList UsesActionList

 262  UsesActionList :
 263                 | ActionTimeList OptionalAction
 264                 | TimeActionList OptionalTime

 265  ActionTimeList : SHARP LBRACE Expr RBRACE
 266                 | ActionTimeList COLON UsesActionAttr SHARP LBRACE Expr RBRACE

 267  TimeActionList : COLON UsesActionAttr
 268                 | TimeActionList SHARP LBRACE Expr RBRACE COLON UsesActionAttr

 269  OptionalAction :
 270                 | COLON UsesActionAttr

 271  OptionalTime :
 272               | SHARP LBRACE Expr RBRACE

 273  UsesActionAttr : ID
 274                 | ACTION

 275  UsesLocationList : UsesLocation
 276                   | UsesLocationList AMPERS UsesLocation

 277  UsesLocation : ID Opt_Bit_Optr
 278               | ID LBRACK Expr RBRACK Opt_SecDim Opt_Bit_Optr

 279  Opt_SecDim :
 280             | LBRACK RBRACK

 281  %entry% : '\001' top

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . top  (281)

	CANON  shift 3
	ELSE  shift 4
	ELSIF  shift 5
	ENDIF  shift 6
	EXTEND  shift 7
	FOR  shift 8
	IF  shift 9
	LET  shift 10
	MEM  shift 11
	MODE  shift 12
	OP  shift 13
	REG  shift 14
	SWITCH  shift 15
	TYPE  shift 16
	VAR  shift 17
	PORT  shift 18
	RESOURCE  shift 19
	EXCEPTION  shift 20
	.  error

	top  goto 21
	specs  goto 22
	MachineSpec  goto 23
	LetDef  goto 24
	TypeSpec  goto 25
	MemorySpec  goto 26
	RegisterSpec  goto 27
	PortSpec  goto 28
	ModeSpec  goto 29
	OpSpec  goto 30
	ResourceSpec  goto 31
	ExceptionSpec  goto 32
	ExtendSpec  goto 33
	CanonSpec  goto 34
	VarSpec  goto 35
	RegisterSpecHeader  goto 36
	PortSpecHeader  goto 37
	ExtendHeader  goto 38


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	CanonSpec : CANON . STRING_CONST LPAREN CanonParamList RPAREN  (32)
	CanonSpec : CANON . Type STRING_CONST LPAREN CanonParamList RPAREN  (33)
	CanonSpec : CANON . STRING_CONST LPAREN RPAREN  (34)
	CanonSpec : CANON . Type STRING_CONST LPAREN RPAREN  (35)
	CanonSpec : CANON . Type STRING_CONST  (36)

	ID  shift 39
	STRING_CONST  shift 40
	BOOL  shift 41
	CARD  shift 42
	ENUM  shift 43
	FIX  shift 44
	FLOAT  shift 45
	INT  shift 46
	LBRACK  shift 47
	.  error

	Type  goto 48
	TypeExpr  goto 49


state 4
	MachineSpec : ELSE .  (17)

	.  reduce 17


state 5
	MachineSpec : ELSIF . Expr THEN  (18)

	ID  shift 50
	BIN_CONST  shift 51
	BIN_CONST_64  shift 52
	CARD_CONST  shift 53
	CARD_CONST_64  shift 54
	FIXED_CONST  shift 55
	STRING_CONST  shift 56
	COERCE  shift 57
	FORMAT  shift 58
	IF  shift 59
	SWITCH  shift 60
	EXCLAM  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TILD  shift 64
	LPAREN  shift 65
	.  error

	Expr  goto 66
	Constant  goto 67


state 6
	MachineSpec : ENDIF .  (19)

	.  reduce 19


state 7
	ExtendHeader : EXTEND . ExtendIDList  (96)

	ID  shift 68
	.  error

	ExtendIDList  goto 69


state 8
	MachineSpec : FOR . error  (20)

	error  shift 70
	.  error


state 9
	MachineSpec : IF . Expr THEN  (16)

	ID  shift 50
	BIN_CONST  shift 51
	BIN_CONST_64  shift 52
	CARD_CONST  shift 53
	CARD_CONST_64  shift 54
	FIXED_CONST  shift 55
	STRING_CONST  shift 56
	COERCE  shift 57
	FORMAT  shift 58
	IF  shift 59
	SWITCH  shift 60
	EXCLAM  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TILD  shift 64
	LPAREN  shift 65
	.  error

	Expr  goto 71
	Constant  goto 67


state 10
	LetDef : LET . OptStar LocatedID EQ LetExpr  (23)
	LetDef : LET . OptStar LocatedID COLON Type EQ LetExpr  (24)
	OptStar : .  (25)

	STAR  shift 72
	ID  reduce 25

	OptStar  goto 73


state 11
	MemorySpec : MEM . LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList  (59)

	ID  shift 74
	.  error

	LocatedID  goto 75


state 12
	ModeSpec : MODE . LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (88)
	ModeSpec : MODE . LocatedID EQ Identifier_Or_List  (89)

	ID  shift 74
	.  error

	LocatedID  goto 76


state 13
	OpSpec : OP . LocatedID LPAREN ParamList RPAREN AttrDefList  (92)
	OpSpec : OP . LocatedID EQ Identifier_Or_List  (93)
	OpSpec : OP . LocatedID error  (94)

	ID  shift 74
	.  error

	LocatedID  goto 77


state 14
	RegisterSpecHeader : REG . LocatedID LBRACK RegPart RBRACK  (60)

	ID  shift 74
	.  error

	LocatedID  goto 78


state 15
	MachineSpec : SWITCH . error  (21)

	error  shift 79
	.  error


state 16
	TypeSpec : TYPE . LocatedID EQ TypeExpr  (44)

	ID  shift 74
	.  error

	LocatedID  goto 80


state 17
	VarSpec : VAR . LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList  (64)

	ID  shift 74
	.  error

	LocatedID  goto 81


state 18
	PortSpecHeader : PORT . LocatedID LPAREN PortPart RPAREN  (62)

	ID  shift 74
	.  error

	LocatedID  goto 82


state 19
	ResourceSpec : RESOURCE . ResourceList  (27)

	ID  shift 74
	.  error

	LocatedID  goto 83
	ResourceList  goto 84
	Resource  goto 85


state 20
	ExceptionSpec : EXCEPTION . IdentifierList  (41)

	ID  shift 74
	.  error

	LocatedID  goto 86
	IdentifierList  goto 87


state 21
	%entry% : '\001' top .  (281)

	.  reduce 281


state 22
	top : specs . EOF  (1)
	specs : specs . MachineSpec  (4)

	CANON  shift 3
	ELSE  shift 4
	ELSIF  shift 5
	ENDIF  shift 6
	EXTEND  shift 7
	FOR  shift 8
	IF  shift 9
	LET  shift 10
	MEM  shift 11
	MODE  shift 12
	OP  shift 13
	REG  shift 14
	SWITCH  shift 15
	TYPE  shift 16
	VAR  shift 17
	PORT  shift 18
	RESOURCE  shift 19
	EXCEPTION  shift 20
	EOF  shift 88
	.  error

	MachineSpec  goto 89
	LetDef  goto 24
	TypeSpec  goto 25
	MemorySpec  goto 26
	RegisterSpec  goto 27
	PortSpec  goto 28
	ModeSpec  goto 29
	OpSpec  goto 30
	ResourceSpec  goto 31
	ExceptionSpec  goto 32
	ExtendSpec  goto 33
	CanonSpec  goto 34
	VarSpec  goto 35
	RegisterSpecHeader  goto 36
	PortSpecHeader  goto 37
	ExtendHeader  goto 38


state 23
	specs : MachineSpec .  (3)

	.  reduce 3


state 24
	MachineSpec : LetDef .  (5)

	.  reduce 5


state 25
	MachineSpec : TypeSpec .  (6)

	.  reduce 6


state 26
	MachineSpec : MemorySpec .  (7)

	.  reduce 7


state 27
	MachineSpec : RegisterSpec .  (8)

	.  reduce 8


state 28
	MachineSpec : PortSpec .  (9)

	.  reduce 9


state 29
	MachineSpec : ModeSpec .  (10)

	.  reduce 10


state 30
	MachineSpec : OpSpec .  (11)

	.  reduce 11


state 31
	MachineSpec : ResourceSpec .  (12)

	.  reduce 12


state 32
	MachineSpec : ExceptionSpec .  (13)

	.  reduce 13


state 33
	MachineSpec : ExtendSpec .  (14)

	.  reduce 14


state 34
	MachineSpec : CanonSpec .  (15)

	.  reduce 15


state 35
	MachineSpec : VarSpec .  (22)

	.  reduce 22


state 36
	RegisterSpec : RegisterSpecHeader . OptionalMemAttrDefList  (61)
	OptionalMemAttrDefList : .  (73)

	ID  shift 90
	ALIAS  shift 91
	INITIALA  shift 92
	VOLATILE  shift 93
	PORTS  shift 94
	USES  shift 95
	CANON  reduce 73
	ELSE  reduce 73
	ELSIF  reduce 73
	ENDIF  reduce 73
	EXTEND  reduce 73
	FOR  reduce 73
	IF  reduce 73
	LET  reduce 73
	MEM  reduce 73
	MODE  reduce 73
	OP  reduce 73
	REG  reduce 73
	SWITCH  reduce 73
	TYPE  reduce 73
	VAR  reduce 73
	PORT  reduce 73
	RESOURCE  reduce 73
	EXCEPTION  reduce 73
	EOF  reduce 73

	OptionalMemAttrDefList  goto 96
	MemAttrDefList  goto 97
	MemAttrDef  goto 98


state 37
	PortSpec : PortSpecHeader . OptionalMemAttrDefList  (63)
	OptionalMemAttrDefList : .  (73)

	ID  shift 90
	ALIAS  shift 91
	INITIALA  shift 92
	VOLATILE  shift 93
	PORTS  shift 94
	USES  shift 95
	CANON  reduce 73
	ELSE  reduce 73
	ELSIF  reduce 73
	ENDIF  reduce 73
	EXTEND  reduce 73
	FOR  reduce 73
	IF  reduce 73
	LET  reduce 73
	MEM  reduce 73
	MODE  reduce 73
	OP  reduce 73
	REG  reduce 73
	SWITCH  reduce 73
	TYPE  reduce 73
	VAR  reduce 73
	PORT  reduce 73
	RESOURCE  reduce 73
	EXCEPTION  reduce 73
	EOF  reduce 73

	OptionalMemAttrDefList  goto 99
	MemAttrDefList  goto 97
	MemAttrDef  goto 98


state 38
	ExtendSpec : ExtendHeader . AttrDefList  (95)
	AttrDefList : .  (107)

	ID  shift 100
	ACTION  shift 101
	IMAGE  shift 102
	SYNTAX  shift 103
	USES  shift 104
	CANON  reduce 107
	ELSE  reduce 107
	ELSIF  reduce 107
	ENDIF  reduce 107
	EXTEND  reduce 107
	FOR  reduce 107
	IF  reduce 107
	LET  reduce 107
	MEM  reduce 107
	MODE  reduce 107
	OP  reduce 107
	REG  reduce 107
	SWITCH  reduce 107
	TYPE  reduce 107
	VAR  reduce 107
	PORT  reduce 107
	RESOURCE  reduce 107
	EXCEPTION  reduce 107
	EOF  reduce 107

	AttrDefList  goto 105
	NOAttrDefList  goto 106
	AttrDef  goto 107
	AttrID  goto 108


state 39
	Type : ID .  (72)

	.  reduce 72


state 40
	CanonSpec : CANON STRING_CONST . LPAREN CanonParamList RPAREN  (32)
	CanonSpec : CANON STRING_CONST . LPAREN RPAREN  (34)

	LPAREN  shift 109
	.  error


state 41
	TypeExpr : BOOL .  (45)

	.  reduce 45


state 42
	TypeExpr : CARD . error  (47)
	TypeExpr : CARD . LPAREN LetExpr RPAREN  (48)
	TypeExpr : CARD . error  (49)

	error  shift 110
	LPAREN  shift 111
	.  error


state 43
	TypeExpr : ENUM . LPAREN ValueList RPAREN  (53)

	LPAREN  shift 112
	.  error


state 44
	TypeExpr : FIX . LPAREN LetExpr COMMA LetExpr RPAREN  (50)

	LPAREN  shift 113
	.  error


state 45
	TypeExpr : FLOAT . LPAREN LetExpr COMMA LetExpr RPAREN  (51)

	LPAREN  shift 114
	.  error


state 46
	TypeExpr : INT . LPAREN LetExpr RPAREN  (46)

	LPAREN  shift 115
	.  error


state 47
	TypeExpr : LBRACK . LetExpr DOUBLE_DOT LetExpr RBRACK  (52)

	ID  shift 50
	BIN_CONST  shift 51
	BIN_CONST_64  shift 52
	CARD_CONST  shift 53
	CARD_CONST_64  shift 54
	FIXED_CONST  shift 55
	STRING_CONST  shift 56
	COERCE  shift 57
	FORMAT  shift 58
	IF  shift 59
	SWITCH  shift 60
	EXCLAM  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TILD  shift 64
	LPAREN  shift 65
	.  error

	Expr  goto 116
	LetExpr  goto 117
	Constant  goto 67


state 48
	CanonSpec : CANON Type . STRING_CONST LPAREN CanonParamList RPAREN  (33)
	CanonSpec : CANON Type . STRING_CONST LPAREN RPAREN  (35)
	CanonSpec : CANON Type . STRING_CONST  (36)

	STRING_CONST  shift 118
	.  error


state 49
	Type : TypeExpr .  (71)

	.  reduce 71


state 50
	Expr : ID . DOT SYNTAX  (172)
	Expr : ID . DOT IMAGE  (173)
	Expr : ID . DOT ID  (174)
	Expr : ID .  (176)
	Expr : ID . LPAREN  (177)
	Expr : ID . LBRACK Expr RBRACK  (178)
	Expr : ID . LBRACK error  (179)

	LBRACK  shift 119
	LPAREN  shift 120
	DOT  shift 121
	error  reduce 176
	ID  reduce 176
	ACTION  reduce 176
	ALIAS  reduce 176
	CANON  reduce 176
	CASE  reduce 176
	DEFAULT  reduce 176
	DO  reduce 176
	ELSE  reduce 176
	ELSIF  reduce 176
	ENDIF  reduce 176
	EXTEND  reduce 176
	FOR  reduce 176
	IF  reduce 176
	IMAGE  reduce 176
	INITIALA  reduce 176
	LET  reduce 176
	MEM  reduce 176
	MODE  reduce 176
	OP  reduce 176
	REG  reduce 176
	SWITCH  reduce 176
	SYNTAX  reduce 176
	THEN  reduce 176
	TYPE  reduce 176
	VAR  reduce 176
	VOLATILE  reduce 176
	PORTS  reduce 176
	PORT  reduce 176
	RESOURCE  reduce 176
	USES  reduce 176
	EXCEPTION  reduce 176
	EOF  reduce 176
	OR  reduce 176
	AND  reduce 176
	LEQ  reduce 176
	GEQ  reduce 176
	EQU  reduce 176
	NEQ  reduce 176
	LEFT_SHIFT  reduce 176
	RIGHT_SHIFT  reduce 176
	DOUBLE_STAR  reduce 176
	ROTATE_RIGHT  reduce 176
	ROTATE_LEFT  reduce 176
	DOUBLE_COLON  reduce 176
	DOUBLE_DOT  reduce 176
	BIT_LEFT  reduce 176
	PIPE  reduce 176
	CIRC  reduce 176
	AMPERS  reduce 176
	GT  reduce 176
	LT  reduce 176
	PLUS  reduce 176
	MINUS  reduce 176
	STAR  reduce 176
	SLASH  reduce 176
	PERCENT  reduce 176
	COLON  reduce 176
	COMMA  reduce 176
	RBRACE  reduce 176
	RBRACK  reduce 176
	RPAREN  reduce 176
	SEMI  reduce 176


state 51
	Constant : BIN_CONST .  (218)

	.  reduce 218


state 52
	Constant : BIN_CONST_64 .  (219)

	.  reduce 219


state 53
	Constant : CARD_CONST .  (216)

	.  reduce 216


state 54
	Constant : CARD_CONST_64 .  (217)

	.  reduce 217


state 55
	Constant : FIXED_CONST .  (215)

	.  reduce 215


state 56
	Expr : STRING_CONST . LPAREN ArgList RPAREN  (171)
	Constant : STRING_CONST .  (220)

	LPAREN  shift 122
	error  reduce 220
	ID  reduce 220
	ACTION  reduce 220
	ALIAS  reduce 220
	CANON  reduce 220
	CASE  reduce 220
	DEFAULT  reduce 220
	DO  reduce 220
	ELSE  reduce 220
	ELSIF  reduce 220
	ENDIF  reduce 220
	EXTEND  reduce 220
	FOR  reduce 220
	IF  reduce 220
	IMAGE  reduce 220
	INITIALA  reduce 220
	LET  reduce 220
	MEM  reduce 220
	MODE  reduce 220
	OP  reduce 220
	REG  reduce 220
	SWITCH  reduce 220
	SYNTAX  reduce 220
	THEN  reduce 220
	TYPE  reduce 220
	VAR  reduce 220
	VOLATILE  reduce 220
	PORTS  reduce 220
	PORT  reduce 220
	RESOURCE  reduce 220
	USES  reduce 220
	EXCEPTION  reduce 220
	EOF  reduce 220
	OR  reduce 220
	AND  reduce 220
	LEQ  reduce 220
	GEQ  reduce 220
	EQU  reduce 220
	NEQ  reduce 220
	LEFT_SHIFT  reduce 220
	RIGHT_SHIFT  reduce 220
	DOUBLE_STAR  reduce 220
	ROTATE_RIGHT  reduce 220
	ROTATE_LEFT  reduce 220
	DOUBLE_COLON  reduce 220
	DOUBLE_DOT  reduce 220
	BIT_LEFT  reduce 220
	PIPE  reduce 220
	CIRC  reduce 220
	AMPERS  reduce 220
	GT  reduce 220
	LT  reduce 220
	PLUS  reduce 220
	MINUS  reduce 220
	STAR  reduce 220
	SLASH  reduce 220
	PERCENT  reduce 220
	COLON  reduce 220
	COMMA  reduce 220
	RBRACE  reduce 220
	RBRACK  reduce 220
	RPAREN  reduce 220
	SEMI  reduce 220


state 57
	Expr : COERCE . LPAREN Type COMMA Expr RPAREN  (167)
	Expr : COERCE . error  (168)

	error  shift 123
	LPAREN  shift 124
	.  error


state 58
	Expr : FORMAT . LPAREN STRING_CONST COMMA EnterFormat ArgList RPAREN LeaveFormat  (169)
	Expr : FORMAT . error  (170)

	error  shift 125
	LPAREN  shift 126
	.  error


state 59
	Expr : IF . Expr THEN Expr ELSE Expr ENDIF  (209)
	Expr : IF . Expr THEN Expr ELSIF Expr ENDIF  (210)
	Expr : IF . error  (211)

	error  shift 127
	ID  shift 50
	BIN_CONST  shift 51
	BIN_CONST_64  shift 52
	CARD_CONST  shift 53
	CARD_CONST_64  shift 54
	FIXED_CONST  shift 55
	STRING_CONST  shift 56
	COERCE  shift 57
	FORMAT  shift 58
	IF  shift 59
	SWITCH  shift 60
	EXCLAM  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TILD  shift 64
	LPAREN  shift 65
	.  error

	Expr  goto 128
	Constant  goto 67


state 60
	Expr : SWITCH . LPAREN Expr RPAREN LBRACE CaseExprBody RBRACE  (212)
	Expr : SWITCH . error  (213)

	error  shift 129
	LPAREN  shift 130
	.  error


state 61
	Expr : EXCLAM . Expr  (200)

	ID  shift 50
	BIN_CONST  shift 51
	BIN_CONST_64  shift 52
	CARD_CONST  shift 53
	CARD_CONST_64  shift 54
	FIXED_CONST  shift 55
	STRING_CONST  shift 56
	COERCE  shift 57
	FORMAT  shift 58
	IF  shift 59
	SWITCH  shift 60
	EXCLAM  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TILD  shift 64
	LPAREN  shift 65
	.  error

	Expr  goto 131
	Constant  goto 67


state 62
	Expr : PLUS . Expr  (202)

	ID  shift 50
	BIN_CONST  shift 51
	BIN_CONST_64  shift 52
	CARD_CONST  shift 53
	CARD_CONST_64  shift 54
	FIXED_CONST  shift 55
	STRING_CONST  shift 56
	COERCE  shift 57
	FORMAT  shift 58
	IF  shift 59
	SWITCH  shift 60
	EXCLAM  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TILD  shift 64
	LPAREN  shift 65
	.  error

	Expr  goto 132
	Constant  goto 67


state 63
	Expr : MINUS . Expr  (203)
